# anketasun

./: .gitignore  anketasun.db  pyproject.toml
anketasun/: anketasun.py  db.py
